Fix instructions margin on mobile.

--- a/src/components/ImageSlider/ImageSlider.scss
+++ b/src/components/ImageSlider/ImageSlider.scss
@@ -74,5 +74,9 @@
     &__toggle {
       width: 5rem;
     }
+
+    &--instructions {
+      margin: 0.5rem;
+    }
   }
 }
