--- a/src/components/Instructions/Instructions.scss
+++ b/src/components/Instructions/Instructions.scss
@@ -12,3 +12,9 @@
     color: $burgundy;
   }
 }
+
+@media(max-width: 767px) {
+  .instructions {
+    margin-bottom: 0.5rem;
+  }
+}
